--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 				<version>2.6</version>
 				<executions>
 					<execution>
-						<phase>validate</phase>
+						<phase>package</phase>
 						<configuration>
 							<configLocation>checkstyle.xml</configLocation>
 							<encoding>UTF-8</encoding>
